2003-08-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b33

	* Fixed incorrect image URL in search.php.

	* User upgrade code no longer prints progress of individual users with
	  usernames, which was a small security risk.

	* Fixed several errors introduced in -b31 with changes in the button
	  value check code.
	
2003-08-26 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b32

        * Corrected typo where the login button text would never be printed.

2003-08-26 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b31

	* Rewrote all checks against button values, which previously failed
	  when values contained special non-HTML entities.

	* Added a lot of quotes.

	* "Valid HTML" banner is now only displayed in standalone mode.
	  (Thanks Darius)

2003-08-26 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b30

	* Fixed missing ">' which caused Gallery to ignore aliases for absent
	  locales.

	* Fixed bug in check_locale() which returned available languages array
	  with wrong key.

	* Fixed bug which makes it impossible to delete or create a user in
	  some languages, because buttons contain non-HMTL entities.

	* Added flag for Simplified Chinese (zh_CN).

2003-08-26 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b29

	* Nearly a complete rewrite of locale tests in setup/functions.inc.
          This fixes 2 bugs:
          1.) When Gallery runs in this environment:
              Linux / PHP with gettext / NO system locales.
              In this case Gallery doesn't have ML capabilities, but in older
	      versions this wasn't fetched.
          2.) When Gallery runs in Windows there were unnecessary (confusing)
	      warnings.

	* Added new languages: Simplified Chinese (zh_CN), Finnish (fi_FI)

	* Synced all languages.

	* Language Updates: Italian (it_IT), German (de_DE)

	* Undo pretty printing in html_wrap, because IE doesn't like tabs.

	* Colors in Config. Wizard are now defined via CSS <style> block in