@@ -64,6 +64,7 @@
 ../slideshow_low.php
 ../sort_album.php
 ../upgrade_album.php
+../upgrade_users.php
 ../user_preferences.php
 ../util.php
 ../view_album.php
