@@ -7,7 +7,6 @@ if (!isset($GALLERY_BASEDIR)) {
 
 	require ('./init.php');
 	require ('./functions.inc');
-	require ($GALLERY_BASEDIR . 'util.php');
 	require ($GALLERY_BASEDIR . 'Version.php');
 if (fs_file_exists($GALLERY_BASEDIR . "config.php")) {
 	// There may be warnings generated by earlier versions of config.php
