@@ -1,3 +1,10 @@
+2003-08-28  Jens <jens@peino.de> & Joan <gallery@joanhenge.plus.com> 1.4.1-cvs-b34
+
+	* Modified locale code so it behaves correctly on Mac and Windows 
+	  systems.
+
+	* Cosmetic change to upgrade_users.php.
+	
 2003-08-26  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b33
 
 	* Fixed incorrect image URL in search.php.
